data/src/main/java/com/example/data/network/error/UserBlockedException.kt
package com.example.data.network.error

class UserBlockedException: RuntimeException()